# GCompris-qt

./: .arcconfig  .clang-format  .flatpak-manifest-teachers.json  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  .reviewboardrc  .travis.yml  ActivityInfo.cpp  ActivityInfo.h  ActivityInfoTree.cpp  ActivityInfoTree.h  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.2.7pre1  CMakeLists.txt.user.3.2-pre1  D26107.diff  D26186.diff  D26186.vs72082.id72109.diff  D26196.diff  D26252.diff  D26260.diff  D27583.diff  GCompris-qt.kdev4  GCompris.pro  GCompris.pro.BACKUP.51397.pro  GCompris.pro.REMOTE.51096.pro  GCompris.pro.orig  HACKING  Messages.sh  README  README.md  README.rst  REUSE.toml  appveyor.yml  babypuzzle.diff  convert.py  (+19 more)
src/: CMakeLists.txt  D26176.diff  D26196.diff  Gemfile  Messages.sh  StaticMessages.sh  activityintro2msg.awk  checkActivities.rb  checkactivitytest.rb  regressiontestoutput.txt  testoutput.txt
src/activities/: .activities.txt.swp  CMakeLists.txt  README  activities.txt  activities.txt.orig  activities.txt~  activities_out.txt  createit.sh
src/activities/AmitTomar/: ActivityInfo.qml  AmitTomar.js  AmitTomar.pri  AmitTomar.qml
src/activities/AnshikaMittal/: ActivityInfo.qml  AnshikaMittal.js  AnshikaMittal.qml  CMakeLists.txt
src/activities/Calender/: ActivityInfo.qml  CMakeLists.txt  Calender.js  Calender.qml  calender_dataset.js  questions.js
src/activities/GianaBhateja/: ActivityInfo.qml  CMakeLists.txt  GianaBhateja.js  GianaBhateja.qml
src/activities/PhotoHunter/: ActivityInfo.qml  CMakeLists.txt  Observe.qml  PhotoHunter.js  PhotoHunter.qml
src/activities/aarsee/: Aarsee.qml  ActivityInfo.qml  CMakeLists.txt  aarsee.js
src/activities/adjacent_numbers/: ActivityConfig.qml  ActivityInfo.qml  Adjacent_numbers.qml  CMakeLists.txt  DraggableTile.qml  DroppableTile.qml  adjacent_numbers.js
src/activities/advanced_colors/: ActivityInfo.qml  AdvancedColors.qml  Advanced_colors.qml  CMakeLists.txt  advanced_colors.js  advanced_colors.pri  advanced_colors.qrc  advanced_colors.svgz
src/activities/algebra_by/: Activity.qml  ActivityConfig.qml  ActivityInfo.qml  Algebra.qml  AlgebraBy.qml  AlgebraText.qml  CMakeLists.txt  activity.js  algebra.js  algebra_by.js  algebra_by.pri  algebra_by.qrc  algebra_by.svgz
src/activities/algebra_div/: ActivityConfig.qml  ActivityInfo.qml  AlgebraDiv.qml  CMakeLists.txt
src/activities/algebra_minus/: ActivityConfig.qml  ActivityInfo.qml  AlgebraMinus.qml  Algebra_minus.qml  CMakeLists.txt  algebra_minus.js  algebra_minus.pri  algebra_minus.qrc  algebra_minus.svgz
src/activities/algebra_plus/: ActivityConfig.qml  ActivityInfo.qml  AlgebraPlus.qml  Algebra_plus.qml  CMakeLists.txt  algebra_plus.js  algebra_plus.pri  algebra_plus.qrc  algebra_plus.svgz
src/activities/algorithm/: ActivityInfo.qml  Algorithm.qml  CMakeLists.txt  Rect.qml  RectHighlight.qml  algorithm.js  algorithm.pri  algorithm.qrc  algorithm.svgz
src/activities/align4/: ActivityInfo.qml  Align4.qml  CMakeLists.txt
src/activities/align4-2players/: ActivityInfo.qml  Align4-2players.qml  Align42players.qml  CMakeLists.txt  Piece.qml  align4-2players.js  align4-2players.svgz  align4.js
src/activities/align4_2players/: ActivityInfo.qml  Align42players.qml  CMakeLists.txt  Piece.qml  align4.js
src/activities/alphabet-sequence/: ActivityConfig.qml  ActivityInfo.qml  AlphabetSequence.qml  CMakeLists.txt  alphabet-sequence.pri  alphabet-sequence.qrc  alphabet-sequence.svgz
src/activities/alphabeticOrder/: ActivityInfo.qml  AlphabeticOrder.qml  CMakeLists.txt
src/activities/alphabetical_order/: ActivityInfo.qml  AlphabeticalOrder.qml  Alphabetical_order.qml  CMakeLists.txt  README
src/activities/analog_electricity/: AGPL-LICENSE  ActivityConfig.qml  ActivityInfo.qml  AnalogElectricity.qml  CMakeLists.txt  DragListItem.qml  ListWidget.qml  TutorialDataset.qml  Wire.qml  analog_electricity.js  cktsim.js
src/activities/animal_quiz/: ActivityInfo.qml  CMakeLists.txt  animal_quiz.js  animal_quiz.qml
src/activities/anuj_activity/: ActivityInfo.qml  Anuj_activity.qml  CMakeLists.txt  anuj_activity.js
src/activities/calendar/: README  (+12 more)
src/core/: ActivityBase.qml  ActivityBase.qml.orig  ActivityInfo.cpp  ActivityInfo.h  ActivityInfoTree.cpp  ActivityInfoTree.h  AdvancedTimer.qml  AnswerButton.qml  ApplicationAndroid.cpp  ApplicationInfo.cpp  ApplicationInfo.h  ApplicationInfoDefault.cpp  ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettingsAndroid.cpp  ApplicationSettingsDefault.cpp  Balloon.qml  Bar.qml  BarButton.qml  BarEnumContent.qml  Bonus.qml  BuyMeOverlay.qml  BuyMeOverlayInapp.qml  CMakeLists.txt  COPYING  ChangeLog.qml  Client.qml  ClientNetworkMessages.cpp  ClientNetworkMessages.h  ControlButton.qml  DataStreamConverter.h  Dataset.cpp  Dataset.h  Dataset.qml  DialogAbout.qml  DialogActivityConfig.qml  DialogBackground.qml  DialogBackground.qml.orig  DialogChooseLevel.qml  DialogConfig.qml  (+91 more)
src/server/: ActivityData.cpp  ActivityData.h  Authentication.cpp  Authentication.h  CMakeLists.txt  ClientData.cpp  ClientData.h  Database.cpp  Database.h  GCompris-teachers.rc  GroupData.cpp  GroupData.h  Main.qml  MessageHandler.cpp  MessageHandler.h  PackageServer.cmake  Server.cpp  Server.h  UserData.cpp  UserData.h  main.cpp  main.qml  qt.conf  server.js  todo
tests/core/: ActivityInfoTest.cpp  ApplicationInfoTest.cpp  ApplicationSettingsMock.h  ApplicationSettingsTest.cpp  CMakeLists.txt  Contents.test  DatasetTest.cpp  DirectoryTest.cpp  DownloadManagerTest.cpp  FileTest.cpp  GImageGrabberTest.cpp
translations/: CMakeLists.txt  gcompris_bg.ts  gcompris_br.ts  gcompris_cs.ts  gcompris_da.ts  gcompris_de.ts  gcompris_de_DE.ts  gcompris_el.ts  gcompris_es.ts  gcompris_fr.ts  gcompris_fr_FR.ts  gcompris_gd.ts  gcompris_gl.ts  gcompris_hu.ts  gcompris_lt.ts  gcompris_lv.ts  gcompris_nl.ts  gcompris_nn.ts  gcompris_pl.ts  gcompris_pt_BR.ts  gcompris_ru.ts  gcompris_sk.ts  gcompris_sl.ts  gcompris_sr.ts  gcompris_sv.ts  gcompris_ta.ts  gcompris_th.ts  gcompris_zh_TW.ts
(+5810 files in other folders)
